--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Arvo:400,700,400italic);
-
 /* MeyerWeb Reset */
 
 html, body, div, span, applet, object, iframe,
@@ -37,6 +35,13 @@ body {
 
 }
 
+#logo {
+  background-image: url("../images/dynamite.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 145px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#232323;
   margin:36px 0 10px;
@@ -47,7 +52,7 @@ p, ul, ol, table, dl {
 }
 
 h1, h2, h3 {
-	font-family: Arvo, Monaco, serif;
+	font-family: serif;
   line-height:1.3;
 	font-weight: normal;
 }
@@ -71,7 +76,7 @@ h3 {
 }
 
 h4, h5, h6 {
-	font-family: Arvo, Monaco, serif;
+	font-family: serif;
 	font-weight: 700;
 }
 
@@ -163,9 +168,9 @@ p img {
 /* Code blocks */
 
 code, pre {
-	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	font-family: Terminal, monospace;
   color:#000;
-  font-size:14px;
+  font-size:10px;
 }
 
 pre {
@@ -192,7 +197,7 @@ table {
  }
 
 th {
-  font-family: 'Arvo', Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
 	font-size: 18px;
 	font-weight: normal;
   padding: 10px;
@@ -215,12 +220,12 @@ td {
 /* Header */
 
 header {
-	background-color: #171717;
-	color: #FDFDFB;
+	background-color: #BB8F57;
+	color: #000;
   width:170px;
   float:left;
   position:fixed;
-	border: 1px solid #000;
+	border: 1px solid #8E4715;
 	-webkit-border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	-moz-border-radius-topright: 4px;
@@ -237,7 +242,7 @@ p.header {
 }
 
 h1.header {
-	font-family: Arvo, sans-serif;
+	font-family: sans-serif;
 	font-size: 30px;
 	font-weight: 300;
 	line-height: 1.3em;
@@ -247,7 +252,8 @@ h1.header {
 
 
 h1.header, a.header, a.name, header a{
-	color: #fff;
+	color: #000;
+	text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 0;
 }
 
 a.header {
@@ -272,18 +278,18 @@ header li {
 	padding: 6px 6px 6px 7px;
 
 	background: #AF0011;
-	background: -moz-linear-gradient(top, #AF0011 0%, #820011 100%);
+	background: -moz-linear-gradient(top, #CC9A5C 0%, #543816 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: -o-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: -ms-linear-gradient(top, #AF0011 0%,#820011 100%);
-  background: linear-gradient(top, #AF0011 0%,#820011 100%);
+  background: -webkit-linear-gradient(top, #CC9A5C 0%,#543816 100%);
+  background: -o-linear-gradient(top, #CC9A5C 0%,#543816 100%);
+  background: -ms-linear-gradient(top, #CC9A5C 0%,#543816 100%);
+  background: linear-gradient(top, #CC9A5C 0%,#543816 100%);
 
 	border-radius:4px;
   border:1px solid #0D0D0D;
 
-	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
+	-webkit-box-shadow: inset 0px 1px 1px 0 rgb(210, 141, 38);
+	box-shadow: inset 0px 1px 1px 0 rgb(210, 141, 38);;
 
 }
 
@@ -348,6 +354,20 @@ footer {
     width:auto;
   }
 
+  h1.header {
+    font-size:64px;
+  }
+
+  p.header {
+    font-size: 22px;
+  }
+
+  #logo {
+    padding-left: 180px;
+    padding-top: 34px;
+    height: 75px;
+  }
+
 	footer {
 		border-top: 1px solid #ccc;
 		margin:0 84px 0 50px;
@@ -355,7 +375,9 @@ footer {
 	}
 
   header {
-    padding-right:320px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right:20px;
   }
 
   section {
@@ -368,9 +390,15 @@ footer {
   }
 
   header ul {
+    display: block;
     position:absolute;
-    right:130px;
-    top:84px;
+    left:30px;
+    top:200px;
+  }
+  header ul li {
+    display: block;
+    float: left;
+    margin-right: 20px;
   }
 }
 
@@ -381,7 +409,21 @@ footer {
 
   header {
     padding:10px 20px 0;
-		margin-right: 0;
+    margin:0px 25px 0 0;
+  }
+
+  h1.header {
+    font-size:44px;
+  }
+  
+  p.header {
+    font-size: 16px;
+  }
+
+  #logo {
+    padding-left: 140px;
+    padding-top: 25px;
+    height: 55px;
   }
 
 	section {
@@ -393,15 +435,50 @@ footer {
 		margin: 0 0 0 30px;
 	}
 
-  header ul, header p.view {
+  header p.view {
     position:static;
   }
+
+  header ul {
+    display: block;
+    position:absolute;
+    left:240px;
+    top:20px;
+  }
+  header ul li {
+    display: block;
+    float: left;
+    margin-right: 2px;
+  }
+
+  header ul li.download {
+    display:none;
+  }
+
 }
 
 @media print, screen and (max-width: 480px) {
 
+  header {
+    margin:0px 25px 0 0;
+  }
+    
   header ul li.download {
     display:none;
+  }
+
+  h1.header {
+    font-size:24px;
+  }
+
+  p.header {
+    font-size: 12px;
+  }
+
+  #logo {
+    padding-left: 100px;
+    padding-top: 16px;
+    height: 35px;
   }
 
 	footer {
