--- a/priv/fuse/routes/main.eex
+++ b/priv/fuse/routes/main.eex
@@ -1,12 +1,14 @@
-<% gen_dispatch = :cowboy_router.compile([{:_,
-  [
-    {"/", ViewsHandler, [page: "console"]},
-    {"/favicon.ico", :cowboy_static,
-      {:priv_file, :dynamite, "fuse/static/favicon.ico"}},
-    {"/static/[...]", :cowboy_static,
-      {:priv_dir, :dynamite, "fuse/static"}},
-    {"/c/:com/[...]", CommandHandler, []}
-  ]
-  }])
-  :cowboy.set_env(:fuse, :dispatch, gen_dispatch)
+<% 
+  :cowboy.set_env(:fuse, :dispatch,
+    :cowboy_router.compile([{:_,
+      [
+        {"/", ViewsHandler, [page: "console"]},
+        {"/favicon.ico", :cowboy_static,
+          {:priv_file, :dynamite, "fuse/static/favicon.ico"}},
+        {"/static/[...]", :cowboy_static,
+          {:priv_dir, :dynamite, "fuse/static"}},
+        {"/c/:com/[...]", CommandHandler, []}
+      ]
+    }])
+  )
 %>
